# alp

./: LICENSE  Makefile  ac.cabal  chess.cabal  gameoflife.cabal  prooftheorem.cabal  testing.mk
src/: Common.hs  Errors.hs  Eval.hs  Games.hs  Global.hs  Lang.hs  Main.hs  MonadAC.hs  MonadChess.hs  MonadFD4.hs  PPrint.hs  Parse.hs  Subst.hs
tests/: 101.lis  beacon.lis  ejemplo.lis  line.lis
tests/00-parse/: movs.lis  movs.md
tests/briansBrain/: oscillator.lis  spaceship.lis
tests/gameOfLife/: 101.lis  beacon.lis  ejemplo.lis  explotion.lis  glider.lis  heart.lis  line.lis
tests/ghmodel/: spiral.lis  test.lis
tests/langton/: ex.lis
tests/maze/: start.lis
tests/oneDimension/: start.lis
tests/rule184/: start.lis
tests/rule90/: start.lis
tests/sand/: mount.lis  tests.lis
tests/seeds/: example.lis
