cabal-version:      2.4
name:               chess
version:            0.1.0.2023

-- A short (one-line) description of the package.
synopsis:           Código de trabajo final para la materia ALP (FCEIA/UNR)

-- A longer description of the package.
-- description:

homepage:       https://github.com/uhedman/alp#readme
bug-reports:        https://github.com/uhedman/alp/issues

author:         Ulises Hedman
maintainer:     ulyhedman@hotmail.com
copyright:      2023 Ulises Hedman
license-file:   LICENSE

-- category:
extra-source-files:
    ChangeLog.md
    README.md

executable chess
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    other-modules:
        Common
        Errors
        Eval
        Global
        Lang
        MonadChess
        PPrint
        Parse

    ghc-options: 
        -threaded 
        -rtsopts 
        -with-rtsopts=-N 
        -fwarn-tabs 
        -fwarn-unused-imports 
        -fwarn-missing-signatures 
        -fwarn-name-shadowing 
        -fwarn-incomplete-patterns
    -- other-extensions:
    build-depends:    
          base >=4.7
        , array
        , binary
        , bytestring
        , exceptions
        , extra
        , filepath
        , haskeline
        , mtl
        , optparse-applicative
        , parsec
        , pretty
        , prettyprinter
        , prettyprinter-ansi-terminal
        , text
    hs-source-dirs:   src
    default-language: Haskell2010
